<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="40dp"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/leaf_light"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:navigationIcon="@drawable/ic_back">

            <TextView
                android:id="@+id/label_fragment_text_vew"
                style="@style/TextStyle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/title_authorization" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/sing_social_text_vew"
                style="@style/TextStyle10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/sign_in_through_social_networks"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/icon_vk_image_view"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="@dimen/margin_default"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_social_vk"
                app:layout_constraintEnd_toStartOf="@id/icon_fb_image_view"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sing_social_text_vew" />

            <ImageView
                android:id="@+id/icon_fb_image_view"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/margin_default"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_social_fb"
                app:layout_constraintEnd_toStartOf="@id/icon_ok_image_view"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@id/icon_vk_image_view"
                app:layout_constraintTop_toBottomOf="@id/sing_social_text_vew" />


            <ImageView
                android:id="@+id/icon_ok_image_view"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/margin_default"
                android:layout_marginEnd="60dp"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_social_ok"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@id/icon_fb_image_view"
                app:layout_constraintTop_toBottomOf="@id/sing_social_text_vew" />

            <TextView
                android:id="@+id/login_authorization_text_view"
                style="@style/TextStyle10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/login_authorization"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/icon_fb_image_view" />

            <TextView
                android:id="@+id/email_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_default"
                android:layout_marginTop="@dimen/margin_default"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="4sp"
                android:text="@string/email_title"
                android:textColor="@color/black_38"
                android:textSize="12sp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_authorization_text_view" />

            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_default_small"
                android:backgroundTint="@color/black_12"
                android:hint="@string/hint_input_e_mail"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_title" />

            <TextView
                android:id="@+id/password_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_default"
                android:layout_marginTop="@dimen/margin_default"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="4sp"
                android:text="@string/password_title"
                android:textColor="@color/black_38"
                android:textSize="12sp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_edit_text" />

            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_default_small"
                android:backgroundTint="@color/black_12"
                android:drawableEnd="@drawable/ic_open_password"
                android:hint="@string/hint_input_password"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_title" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                style="@style/TextStyle17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/margin_default"
                android:layout_marginTop="@dimen/margin_default_large"
                android:backgroundTint="@drawable/color_login_button"
                android:elevation="2dp"
                android:enabled="false"
                android:gravity="center"
                android:stateListAnimator="@null"
                android:text="@string/login_button_text"
                android:textAllCaps="true"
                android:translationZ="2dp"
                app:cornerRadius="@dimen/corner_radius_logout_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_edit_text" />

            <TextView
                android:id="@+id/forgot_password_text_view"
                style="@style/clickable_green_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default"
                android:minHeight="24dp"
                android:text="@string/forgot_your_password"
                app:layout_constraintStart_toStartOf="@id/login_button"
                app:layout_constraintTop_toBottomOf="@id/login_button" />

            <TextView
                android:id="@+id/registration_text_view"
                style="@style/clickable_green_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default"
                android:minHeight="24dp"
                android:text="@string/registration"
                app:layout_constraintEnd_toEndOf="@id/login_button"
                app:layout_constraintTop_toBottomOf="@id/login_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>